WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271643
[iOS] AVVideoCaptureSource is not handling the case of another application changing the device videoZoomFactor
https://bugs.webkit.org/show_bug.cgi?id=271643
Summary
[iOS] AVVideoCaptureSource is not handling the case of another application ch...
youenn fablet
Reported
2024-03-25 06:54:25 PDT
[iOS] AVVideoCaptureSource is not handling the case of another application changing the device videoZoomFactor
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-25 06:54:39 PDT
<
rdar://problem/125351159
>
youenn fablet
Comment 2
2024-03-25 07:00:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26406
EWS
Comment 3
2024-03-27 06:37:02 PDT
Committed
276731@main
(ca83b80de2e2): <
https://commits.webkit.org/276731@main
> Reviewed commits have been landed. Closing PR #26406 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug